Update Schedule Session Changes

--- a/app/styles/ticket_sidebar.css
+++ b/app/styles/ticket_sidebar.css
@@ -483,5 +483,5 @@ input#timezone_filter{
 }
 
 .updated-schedule-session {
-    background-color   :    yellow; 
+    background-color   :    #FFF5BC; 
 }
