--- a/app/styles/ticket_sidebar.css
+++ b/app/styles/ticket_sidebar.css
@@ -15,13 +15,22 @@ body{
 }
 
 .primary-message{
-    line-height 	: 	20px;
-    clear 			: 	both;
+    line-height 	: 	22px;
+    text-align      :   center;
+    position        :   relative;
+    float           :   left;
+    width           :   100%;
+    margin-top      :   15px;
 }
 
 .secondary-message{
     margin-bottom 	: 	15px !important;
     color 			: 	#999;
+    line-height     :   34px;
+    text-align      :   center;
+    width           :   100%;
+    position        :   relative;
+    float           :   left;
 }
 
 /** Session Type Radio CSS **/
@@ -106,6 +115,13 @@ body{
 	clear 		: 	both;
 	width 		: 	100%;
 	margin-top 	: 	15px;     	
+}
+
+.btn-container  {
+    position    :   relative;
+    float       :   left;
+    margin-left :   50%;
+    transform   :   translateX(-50%);   
 }
 
 /** Assist Preloader CSS **/
