Small issue fixes

--- a/app/styles/ticket_sidebar.css
+++ b/app/styles/ticket_sidebar.css
@@ -371,6 +371,7 @@ input#timezone_filter{
     clear       :   both;
     padding     :   15px 0;
     border-bottom:  1px solid #ccc;
+    width       :   100%; 
 }
 
 .get-schedule-session-ticket-details {
